# memberry

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  memberry.py  pyproject.toml  requirements.txt
docs/: integrations.md
examples/demo_repo/: README.md  auth.py  billing.py
memberry/: __init__.py  __main__.py  cli.py  doctor.py  ingest.py  recall.py  serve.py  update.py
scripts/: demo.py
src/: cli_utils.py  config.py  ingest.py  lifecycle.py  manifest.py  serve.py
tests/: test_cli.py  test_recall.py  test_update.py
