[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memberry"
version = "0.1.0"
description = "Codebase memory for AI coding agents, powered by Cognee's hybrid graph-vector store."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jayesh" }]
keywords = ["cognee", "ai-agents", "memory", "knowledge-graph", "rag", "llm", "developer-tools"]
dependencies = [
    "cognee[fastembed]>=1.2,<2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
memberry = "memberry.cli:main"

[project.urls]
Homepage = "https://github.com/jayesh1126/memberry"

[tool.setuptools.packages.find]
include = ["memberry*"]
